Fix sankey labels alignment
For text elements we must use dominant-baseline instead of
alignment-baseline

--- a/budget_app/static/stylesheets/modules/budget-sankey.scss
+++ b/budget_app/static/stylesheets/modules/budget-sankey.scss
@@ -115,7 +115,7 @@ $sankey-expense-color-dark: darken($sankey-expense-color, 10%);
     font-size: 1.125em;
     letter-spacing: .01em;
     font-weight: $font-weight-300;
-    alignment-baseline: middle;
+    dominant-baseline: middle;
 
     &.invert{
       font-weight: $font-weight-400;
